# CPP_project_test

GameCPP/: CMakeLists.txt  GameMenu.qml  Main.qml  Tile.qml  config.cpp  config.h  game.cpp  game.h  main.cpp  map.cpp  map.h  mapgenerator.cpp  mapgenerator.h  player.cpp  player.h  tile.cpp  tile.h  tilecontent.cpp  tilecontent.h
GameCPP/EnemyFactory/: dragon.cpp  enemy.cpp  enemy.h  enemyDragon.cpp  enemyDragon.h  enemyKnight.cpp  enemyKnight.h  enemySkeleton.cpp  enemySkeleton.h  enemyfactory.cpp  enemyfactory.h  skeleton.cpp
GameCPP/ItemFactory/: axe.cpp  axe.h  damagepotion.cpp  damagepotion.h  healthpotion.cpp  healthpotion.h  item.cpp  item.h  itemfactory.h  platehelmet.cpp  platehelmet.h  sword.cpp  sword.h
build-GameCPP-Clone_of_Desktop_x86_windows_msvc2019_pe_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appGameCPP.exp  appGameCPP.ilk  appGameCPP.lib  appgamecpp_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-GameCPP-Clone_of_Desktop_x86_windows_msvc2019_pe_64bit-Debug/.qt/: QtDeploySupport.cmake
build-GameCPP-Clone_of_Desktop_x86_windows_msvc2019_pe_64bit-Debug/.qt/deploy_qml_imports/: appGameCPP.cmake
build-GameCPP-Clone_of_Desktop_x86_windows_msvc2019_pe_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appGameCPP.cmake  Qt6_QmlPlugins_Imports_appGameCPP.rsp
build-GameCPP-Clone_of_Desktop_x86_windows_msvc2019_pe_64bit-Debug/.qtc_clangd/: compile_commands.json
build-GameCPP-Clone_of_Desktop_x86_windows_msvc2019_pe_64bit-Debug/.rcc/: appGameCPP_raw_qml_0.qrc  qmake_GameCPP.qrc  qrc_appGameCPP_raw_qml_0.cpp  qrc_qmake_GameCPP.cpp
build-GameCPP-Clone_of_Desktop_x86_windows_msvc2019_pe_64bit-Debug/GameCPP/: Map.qml  Player.qml  config.json  mapFile.txt  qmldir
build-GameCPP-Clone_of_Desktop_x86_windows_msvc2019_pe_64bit-Debug/appGameCPP_autogen/: deps  mocs_compilation.cpp
build-GameCPP-Clone_of_Desktop_x86_windows_msvc2019_pe_64bit-Debug/meta_types/: appGameCPP_json_file_list.txt  appGameCPP_json_file_list.txt.timestamp  qt6appgamecpp_debug_metatypes.json  qt6appgamecpp_debug_metatypes.json.gen
build-GameCPP-Clone_of_Desktop_x86_windows_msvc2019_pe_64bit-Debug/qmltypes/: appGameCPP_foreign_types.txt
(+363 files in other folders)
